@@ -1,7 +1,7 @@
 <html>
 <!-- $Id$ -->
 <head>
-<title>Tapestry Release 0.2.7</title>
+<title>Tapestry: Java Web Components</title>
 <body>
 
 <A href="http://sourceforge.net/project/?group_id=4754"> 
@@ -10,12 +10,13 @@ align=right valign=top
 width="88" height="31" border="0" alt="SourceForge Logo">
 </a>
 
-<h1>Tapestry Release 0.2.7</h1>
+<h1>Tapestry Release 0.2.8</h1>
 
-<h2>Getting Started</h2>
-
-<p>Tapestry is now distributed as a pre-compiled JAR file and includes pre-generated
-<a href="doc/api/overview-summary.html">Javadoc</a>. 
+<p>Tapestry is a component based framework for creating sophisticated web applications.
+It's used with existing application servers, acting as a kind of "super servlet".  This distribution
+contains the Tapestry framework, related frameworks and libraries, documentation.
+The <a href="http://tapestry.primix.com">Tapestry Home Page</a> contains much more information
+about what Tapestry is, how to use it and why you should!
 
 <p>Tapestry is distributed in three different sizes:
 
@@ -28,7 +29,8 @@ Primix Virtual Library examples
 </ul>
 
 <p>The JARs were compiled on Windows 2000 using Sun's JDK 1.3 compiler, however it is easy
-to rebuild the JARs on different platforms and different compilers.
+to rebuild the JARs on different platforms and different compilers (JDK 1.2 and above).
+
 
 <p>This product includes software developed by the Apache Software Foundation (
 <a href="http://www.apache.org/">http://www.apache.org/</a>).
@@ -37,7 +39,7 @@ to rebuild the JARs on different platforms and different compilers.
 
 Tapestry requires some third party JARs when it is compiled, as well as at
 runtime.  If you downloaded
-the full distribution, all but one of these (j2ee.jar) is already included.  
+the full distribution of these libraries are already included.  
 With the small and medium distribution, you will need to download the other files seperately.
 
 <p><table border=0>
@@ -111,28 +113,17 @@ With the small and medium distribution, you will need to download the other file
 	<td>Distributed with Jetty</td>
 </tr>
 
-
 <tr valign=top bgcolor=silver>
-	<td>j2ee.jar</td>
-	<td>J2EE Reference Implementation
-	<p>Used when compiling the Tapestry framework</td>
-	<td>1.2.1</td>
-	<td><div style="{ font-size: large; color: red; font-style: bold; }">
-	Not Distributable</div>
-	<p>
-From the J2EE RI license:
-<blockquote>
-3.4 Licensee shall have no right to redistribute
-or deploy the Licensed Software or use the
-Licensed Software for productive or commercial
-use.
-</blockquote>
-
-<p>So, go download it yourself, if you want
-to recompile Tapestry on your workstation.
-
-	<td>
-	<a href="http://java.sun.com/j2ee/download.html">http://java.sun.com/j2ee/download.html</a></td>
+	<td>ejb.jar</td>
+	<td>EJB 1.1</td>
+	<td>from jBoss 2.0 FINAL</td>
+	<td>Unknown license, probably GPL</a>
+	<td>Copied from the
+	<a href="http://www.jboss.org">jBoss</a> distribution, which claims to
+	be open source (but neglects to provide a license).  
+	<p>This library is required to compile Tapestry and to compile and
+	run the demos and tutorials.
+	</td>
 </tr>
 
 <tr bgcolor=black>
